--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 <body>
   <h1>My first Website</h1>
   <h3>Wow! Now I can push my code to github</h3>
+  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Id non eligendi totam magni maiores, nihil culpa reprehenderit cupiditate tempore architecto aliquid eos! Sequi saepe quod consequatur cum libero esse dolorum?</p>
 </body>
 </html>
